aneeshbhat1-Salesforce/src/objects/University__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_No__c</fullName>
        <label>Contact No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MailID__c</fullName>
        <label>MailID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>University_Name__c</fullName>
        <label>University Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>University</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Resume_University</fullName>
        <filterScope>Queue</filterScope>
        <label>Resume</label>
        <queue>Resume</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>UCODE-{00}</displayFormat>
        <label>University Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Universities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>